@@ -53,7 +53,7 @@ Package: libc6
 Architecture: amd64 arm armeb i386 m68k mips mipsel powerpc sparc s390 hppa sh3 sh4 sh3eb sh4eb
 Section: libs
 Priority: required
-Provides: ${locale:Depends}
+Provides: ${locale-compat:Depends}
 Description: GNU C Library: Shared libraries and Timezone data
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -112,7 +112,7 @@ XC-Package-Type: udeb
 Architecture: amd64 arm armeb i386 m68k mips mipsel powerpc sparc s390 hppa sh3 sh4 sh3eb sh4eb
 Section: debian-installer
 Priority: extra
-Provides: libc6, libc-udeb, ${locale:Depends}
+Provides: libc6, libc-udeb, ${locale-compat:Depends}
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -125,7 +125,7 @@ Package: libc6.1
 Architecture: alpha ia64
 Section: libs
 Priority: required
-Provides: ${locale:Depends}
+Provides: ${locale-compat:Depends}
 Description: GNU C Library: Shared libraries and Timezone data
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -184,7 +184,7 @@ XC-Package-Type: udeb
 Architecture: alpha ia64
 Section: debian-installer
 Priority: extra
-Provides: libc6.1, libc-udeb, ${locale:Depends}
+Provides: libc6.1, libc-udeb, ${locale-compat:Depends}
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -197,7 +197,7 @@ Package: libc0.3
 Architecture: hurd-i386
 Section: libs
 Priority: required
-Provides: ${locale:Depends}
+Provides: ${locale-compat:Depends}
 Description: GNU C Library: Shared libraries and Timezone data
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -256,7 +256,7 @@ XC-Package-Type: udeb
 Architecture: hurd-i386
 Section: debian-installer
 Priority: extra
-Provides: libc0.3, libc-udeb, ${locale:Depends}
+Provides: libc0.3, libc-udeb, ${locale-compat:Depends}
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -269,7 +269,7 @@ Package: libc1
 Architecture: freebsd-i386
 Section: libs
 Priority: required
-Provides: ${locale:Depends}
+Provides: ${locale-compat:Depends}
 Description: GNU C Library: Shared libraries and Timezone data
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -328,7 +328,7 @@ XC-Package-Type: udeb
 Architecture: freebsd-i386
 Section: debian-installer
 Priority: extra
-Provides: libc1, libc-udeb, ${locale:Depends}
+Provides: libc1, libc-udeb, ${locale-compat:Depends}
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
