@@ -2,7 +2,7 @@ Package: @libc@
 Architecture: @archs@
 Section: libs
 Priority: required
-Provides: ${locale:Depends}
+Provides: ${locale-compat:Depends}
 Description: GNU C Library: Shared libraries and Timezone data
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
@@ -61,7 +61,7 @@ XC-Package-Type: udeb
 Architecture: @archs@
 Section: debian-installer
 Priority: extra
-Provides: @libc@, libc-udeb, ${locale:Depends}
+Provides: @libc@, libc-udeb, ${locale-compat:Depends}
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
