@@ -1,1 +1,14 @@
+#  When glibc is uploaded into unstable, the locales package is immediately
+#  available because it is arch:all.  But libc binary parckages are processed
+#  by autobuilders and become available later.
+#  If compiling locales depend on a given version of localedef (for instance
+#  when ISO codes are updated), the idea is to first bump LOCALES_COMPAT_VER and
+#  make an upload without changing locales.  When this version is available on
+#  all architectures in unstable, locales can be modified and LOCALES_DEP_VER
+#  is bumped too.
+#  LOCALES_COMPAT_VER must always contain two values during the transition phase
+#  so that dependencies in unstable can always be satisfied, and
+#  LOCALES_DEP_VER point to the highest value of LOCALES_COMPAT_VER when
+#  packages are available for all architectures in unstable.
 LOCALES_DEP_VER = 2.3.5-3
+LOCALES_COMPAT_VER = 2.3.5-12 2.3.5-3
