@@ -3,6 +3,10 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
    [ Denis Barbier ]
    * Updated debconf translations:
     - Brazilian Portuguese, by André Luís Lopes  (Closes: #352416)
+   * Modify debver2localesdep.pl, locales-depver and control files to provide
+     a smooth upgrade in unstable when locales require changes in localedef.
+     This is the first part for solving #352620, the proper dependency for
+     locales will be set by the next upload.
 
   [ Clint Adams ]
   * Add hurd-getresuid-dyslexia.diff (fixes incorrect ordering of
